--- a/src/css/less/bootstrap/rules/media-list.less
+++ b/src/css/less/bootstrap/rules/media-list.less
@@ -55,10 +55,12 @@
     .img-circle{
       max-width: 50px;
     }
+
     .media-body{
     
       .media-heading{
-        margin: 0;
+        line-height: 19px;
+        margin: 0 0 9px;
         
         h4, .name{
           font-size: @font-size-base;
@@ -66,11 +68,11 @@
           color: lighten(@ls-dark-color,36%);
           margin-top: 0;
           display: inline-block;
-          margin-bottom: 9px;
         }
         
         .tools{
           float: right;
+
           h5, .date{
             font-weight: 400;
             color: darken(@ls-light-color,15%);
@@ -81,6 +83,7 @@
             a{
               color: darken(@ls-light-color, 14%);
               margin-right: 5px;
+
               &:hover{
                 color: @ls-greyblue-dark;
               }
@@ -89,13 +92,20 @@
           
           > a{
             color: darken(@ls-light-color, 14%);
-            font-size: @font-size-large;
+            font-size: 0;
             margin-left: 10px;
             cursor: pointer;
+            display: inline-block;
+            vertical-align: middle;
 
             &:hover{
               color: @ls-greyblue-dark;
-            }            
+            }           
+
+            > span{
+              font-size: @font-size-large;
+              vertical-align: middle;
+            } 
           }     
         }
       }
