--- a/src/css/less/livescore/rules/comments/ls-condensed-panel-comments.less
+++ b/src/css/less/livescore/rules/comments/ls-condensed-panel-comments.less
@@ -18,7 +18,7 @@
         
         .img-circle{
           max-width: 47px;
-		  background: @ls-user-avatar-placeholder-bg;
+          background: @ls-user-avatar-placeholder-bg;
         }
         
         .avatar{
@@ -42,9 +42,10 @@
         }
         
         .media-heading{
+          margin: 0 0 4px;
+
           h4, .name{
             font-size: 12px;
-            margin-bottom: 7px;
             display: inline-block;
             .text-overflow(); 
             width: 83px;
@@ -56,7 +57,7 @@
 
             h5, .date{
               font-size: 10px;
-              margin: 4px 0 0;
+              margin: 0;
               white-space: nowrap;
               right: 0;
               position: absolute;
